fix gap between positions and transaction history and update statistics

--- a/frontend/src/styles/root.scss
+++ b/frontend/src/styles/root.scss
@@ -37,7 +37,6 @@
   }
 
   .container {
-    height: 80vh;
     display: flex;
     justify-content: flex-start;
   }
